--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_CONTACT_EMAIL=hibafathima0502@gmail.com
 VITE_CONTACT_PHONE=6282921362
 VITE_CONTACT_LINKEDIN=https://www.linkedin.com/in/hiba-fathima-kalathil
-VITE_CONTACT_INSTAGRAM=https://www.instagram.com/your_instagram_handle
+VITE_CONTACT_INSTAGRAM=https://www.instagram.com/.hib_a.?igsh=MWR1dmwyaGhobW5s
 VITE_CONTACT_GITHUB=https://github.com/hibafathimak
