--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_CONTACT_EMAIL=hibafathima0502@gmail.com
 VITE_CONTACT_PHONE=6282921362
 VITE_CONTACT_LINKEDIN=https://www.linkedin.com/in/hiba-fathima-kalathil
 VITE_CONTACT_GITHUB=https://github.com/hibafathimak
+VITE_LOGIN_EMAIL=Hibasecret@gmail.com
+VITE_LOGIN_PASSWORD=@hiba@portfolio@
